I fixed the overflow on skill section

--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,7 @@ header {
   background: #ebf0ee;
   border-radius: 4px;
   margin-left: 5px;
+  font-size: 12px;
 }
 
 .card-items button {
@@ -342,12 +343,17 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   height: 300px;
-  width: 100%;
+  width: 85%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border: 0;
+}
+
+.skill-items {
+  display: flex;
+  flex-direction: column;
 }
 
 .skill-items img {
